# cpack-exercise-wt2526

./: CMakeLists.txt  README.md  lintian_final_output.sh  lintian_initial_output.sh
cmake/: CPackConfig.cmake
